2007-03-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/win32.c:
   Added new file filter for Open File dialog to only show supported
   source files (for native Win32 dialog).
 * src/main.c: Changed location of translation files to lib\locale
               on Win32.
 * geany.nsi: Added NSIS installer script for the Win32 installer.


2007-03-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/project.c, src/project.h:
   Run Make All and Make Custom from the project base directory, if set.
   Add project_get_make_dir().


2007-03-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/tools.c, src/utils.c:
   Applied patch from Jeff Pohlmeyer to improve the custom command
   execution code(thanks).
 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_selection_mode(), sci_set_selection_mode(),
   sci_get_pos_at_line_sel_start(), sci_get_pos_at_line_sel_end().
 * src/document.c:
   Improved replacing in rectangle selections (closes #1665571).
 * src/build.c, src/tools.c, src/utils.c, src/utils.h:
   Set IO channels for custom commands to blocking mode
   (thanks to Jeff Pohlmeyer).
 * data/filetypes.python, src/highlighting.c:
   Added missing keywords: as, with, False, None and True.
 * src/dialogs.c, src/filetypes.c, src/filetypes.h:
   Added new file filter for Open File dialog to only show supported
   source files (list of all defined filename extensions).


2007-02-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c, src/msgwindow.h, src/search.c:
   Show number of matches when using Find All or Find in Files.
   Add msgwin_msg_add_fmt().
 * src/build.c:
   Make build_spawn_cmd() take a command string instead of joining an
   array of strings.


2007-02-27  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c:
   Use utils_strv_new() for all filetype patterns.


2007-02-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/tools.c: Fixed wrong sensitiveness of custom commands menu items.